--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="./style.css">
     <title>iMessage Template</title>
 </head>
 <body>
     <div class="notification">
         <div class="header">header</div>
-    </div>
-    <div class="message">
         <div class="messagebody">message text</div>
     </div>
 </body>
