--- a/index.html
+++ b/index.html
@@ -9,8 +9,19 @@
 </head>
 <body>
     <div class="notification">
-        <div class="header">header</div>
-        <div class="messagebody">message text</div>
+            <div class="header">
+                <img src="./128px-IMessage_logo.png" alt="imessage-icon">
+                <p class="headercontent">messages</p>
+                <p class="headertime">now</p>
+            </div>
+            <div class="body">
+                <div class="who">Matt D. Smith</div>
+                <div class="message">
+                This is a test message. Use this for a demo notification on your app design.
+                </div>
+            </div>
     </div>
+
+
 </body>
 </html>
