--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>iMessage Template</title>
 </head>
 <body>
     <div class="notification">
             <div class="header">
-                <img src="./128px-IMessage_logo.png" alt="imessage-icon">
+                <img src="./img/128px-IMessage_logo.png" alt="imessage-icon">
                 <p class="headercontent">messages</p>
                 <p class="headertime">now</p>
             </div>
